# systemd-logger

./: CMakeLists.txt  README.md  conanfile.py
src/: Log.cpp
